examples/neg/effekt_implemented_extern.effekt
extern def test() at io: Unit = default { () }

extern def foo() at pure: Unit =
  js { test() }
  default { () }

def main() = { foo() }